<resources>
    <string name="app_name">BondDemo</string>

    <!-- sign in -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="log_out">Log Out</string>
    <string name="home_title">home</string>
    <string name="forgot_pass"><u>Forgot Password?</u></string>
    <string name="call_hotline"><u>Call hotline</u></string>
    <string name="terms_condition"><u>Term &amp; conditions</u></string>
    <string name="terms_condition_recommend">By loggin in, you are bond by the </string>
    <string name="owner">Powered by Phillip</string>

    <!-- home price -->
    <string name="issuer_filter">All Issuer</string>
    <string name="curency_filter">All Curency</string>
    <string name="watch_list_filter">Watch List</string>
    <string name="action_confirm">Do you want to do this?</string>
    <string name="place_trades">Place Trades</string>
    <string name="view_information">View Information</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="filter_by_issuer_title">Chose your issuer</string>
    <string name="filter_by_currency_title">Chose your currentcy</string>
    <string name="filter_by_watch_list_title">Chose your watch list</string>
</resources>
