<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/top_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_user_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_view_child_dimen"
                    android:hint="user id" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_view_child_dimen"
                    android:ems="10"
                    android:hint="password"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/text_forgot_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_view_child_dimen"
                android:text="@string/forgot_pass"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/link" />

            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_view_child_dimen"
                android:background="@drawable/button_blue_border_round_all"
                android:text="Sign In" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_call_hotline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_view_child_dimen"
            android:text="@string/call_hotline"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/link" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_view_child_dimen"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_view_child_dimen"
                android:text="@string/terms_condition_recommend"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/text_term_conditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_view_child_dimen"
                android:text="@string/terms_condition"
                android:textAppearance="?android:attr/textAppearanceSmallInverse"

                android:textColor="@color/link" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_view_child_dimen"
            android:text="@string/owner"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>
</RelativeLayout>
